# docker_ui

./: Cargo.toml
data/: appwindow.json
src/: main.rs
ui/: appwindow.slint  container-item.slint  types.slint
ui/components/: action-panel.slint  container-item.slint
