[package]
name = "docker_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.16.1"
futures = "0.3.30"
slint = "*"
tokio = {version = "*", features = ["full"]}
tokio-macros = {version = "*"}

[build-dependencies]
slint-build = "1.6.0"
