[package]
name = "docker_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.16.1"
env_logger = "0.11.3"
log = "0.4.21"
slint = "1.6.0"
tokio = {version = "1.38.0", features = ["rt-multi-thread"]}

[build-dependencies]
slint-build = "1.6.0"
